fix(structure): fix structure + packages versions