@@ -1,11 +1,11 @@
-package com.example.search.service;
+package com.thebiggestdata.searchservice.service;
 
-import com.example.search.config.MongoConfig;
-import com.example.search.model.BookInfo;
-import com.example.search.model.SearchFilters;
-import com.example.search.model.SearchResult;
-import com.example.search.repository.InvertedIndexRepository;
-import com.example.search.repository.MetadataRepository;
+import com.thebiggestdata.searchservice.config.MongoConfig;
+import com.thebiggestdata.searchservice.model.BookInfo;
+import com.thebiggestdata.searchservice.model.SearchFilters;
+import com.thebiggestdata.searchservice.model.SearchResult;
+import com.thebiggestdata.searchservice.repository.InvertedIndexRepository;
+import com.thebiggestdata.searchservice.repository.MetadataRepository;
 import jakarta.annotation.PostConstruct;
 import jakarta.annotation.PreDestroy;
 import org.slf4j.Logger;
@@ -14,7 +14,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 public class SearchService {
@@ -51,7 +50,7 @@ public class SearchService {
     public SearchResult search(String query, SearchFilters filters) {
         logger.info("Search request - query: '{}', filters: {}", query, filtersToString(filters));
 
-        Set<Integer> bookIds = invertedIndexRepository.findBookIdsByTerm(query);
+        var bookIds = invertedIndexRepository.findBookIdsByTerm(query);
 
         if (bookIds.isEmpty()) {
             logger.info("No books found for query '{}'", query);
@@ -60,10 +59,10 @@ public class SearchService {
 
         logger.debug("Found {} candidate books from inverted index", bookIds.size());
 
-        List<BookInfo> candidateBooks = metadataRepository.findBooksByIds(bookIds);
-        List<BookInfo> filteredBooks = applyFilters(candidateBooks, filters);
+        var candidateBooks = metadataRepository.findBooksByIds(bookIds);
+        var filteredBooks = applyFilters(candidateBooks, filters);
 
-        filteredBooks.sort(Comparator.comparingInt(BookInfo::getBookId));
+        filteredBooks.sort(Comparator.comparingInt(BookInfo::bookId));
 
         logger.info("Search completed - query: '{}', results: {}", query, filteredBooks.size());
 
@@ -82,26 +81,26 @@ public class SearchService {
 
         return books.stream()
                 .filter(book -> matchesFilters(book, filters))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private boolean matchesFilters(BookInfo book, SearchFilters filters) {
         if (filters.hasAuthor()) {
-            if (book.getAuthor() == null ||
-                    !book.getAuthor().toLowerCase().contains(filters.getAuthor().toLowerCase())) {
+            if (book.author() == null ||
+                    !book.author().toLowerCase().contains(filters.author().toLowerCase())) {
                 return false;
             }
         }
 
         if (filters.hasLanguage()) {
-            if (book.getLanguage() == null ||
-                    !book.getLanguage().equalsIgnoreCase(filters.getLanguage())) {
+            if (book.language() == null ||
+                    !book.language().equalsIgnoreCase(filters.language())) {
                 return false;
             }
         }
 
         if (filters.hasYear()) {
-            if (book.getYear() == null || !book.getYear().equals(filters.getYear())) {
+            if (book.year() == null || !book.year().equals(filters.year())) {
                 return false;
             }
         }
@@ -110,12 +109,12 @@ public class SearchService {
     }
 
     private Map<String, Object> buildFiltersMap(SearchFilters filters) {
-        Map<String, Object> filtersMap = new HashMap<>();
+        var filtersMap = new HashMap<String, Object>();
 
         if (filters != null) {
-            if (filters.hasAuthor()) filtersMap.put("author", filters.getAuthor());
-            if (filters.hasLanguage()) filtersMap.put("language", filters.getLanguage());
-            if (filters.hasYear()) filtersMap.put("year", filters.getYear());
+            if (filters.hasAuthor()) filtersMap.put("author", filters.author());
+            if (filters.hasLanguage()) filtersMap.put("language", filters.language());
+            if (filters.hasYear()) filtersMap.put("year", filters.year());
         }
 
         return filtersMap;
@@ -126,10 +125,10 @@ public class SearchService {
             return "none";
         }
 
-        List<String> parts = new ArrayList<>();
-        if (filters.hasAuthor()) parts.add("author=" + filters.getAuthor());
-        if (filters.hasLanguage()) parts.add("language=" + filters.getLanguage());
-        if (filters.hasYear()) parts.add("year=" + filters.getYear());
+        var parts = new ArrayList<String>();
+        if (filters.hasAuthor()) parts.add("author=" + filters.author());
+        if (filters.hasLanguage()) parts.add("language=" + filters.language());
+        if (filters.hasYear()) parts.add("year=" + filters.year());
 
         return String.join(", ", parts);
     }
